--- a/content/settings.json
+++ b/content/settings.json
@@ -1,7 +1,7 @@
 {
   "siteMetadata": {
     "language": "en",
-    "siteUrl": "https://gatsby-starter-portfolio-minimal-theme.netlify.app/",
+    "siteUrl": "https://michaelpaguilar.netlify.app/",
     "title": "Michael Aguilar Portfolio",
     "titleTemplate": "%s · Portfolio Minimal",
     "description": "Michael Aguilar full stack developer portfolio.",
